@@ -9,8 +9,8 @@ if (window.testRunner) {
 </script>
 </head>
 <body>
-<iframe src="resources/blocked-example.html"></iframe>
+<iframe src="resources/unblocked-example.html"></iframe>
 <div id="results"></div>
-Test that we cannot access localStorage from a file URL if unversal access is turned off.
+Test that we can access localStorage from a file URL even if universal access is turned off.
 </body>
 </html>
